fix geneder swapping issue