@@ -8,6 +8,7 @@ import org.apache.commons.lang.StringUtils;
 
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -41,7 +42,7 @@ public class ClassDivisionGenderSwap extends ClassDivisionProcessor {
           Integer newGrade,
       List<ClassDivisionProcessDto> classDivisionProcessDtoList,
       ClassGradeExpectedInput classGradeExpectedInput) {
-    List<ClassDivisionProcessDto> genderSwapPool = new ArrayList<>();
+    HashSet<ClassDivisionProcessDto> genderSwapPool = new HashSet<>();
     double totalFemaleCount =
         classDivisionProcessDtoList.stream()
             .filter(e -> StringUtils.equalsIgnoreCase(e.getStudentGender(), "F"))
@@ -93,8 +94,12 @@ public class ClassDivisionGenderSwap extends ClassDivisionProcessor {
                     malePerClassProcessDtoList.get(
                         malePerClassProcessDtoList.indexOf(currentDto) + 1);
                 if (currentDto.equals(malePerClassProcessDtoList.getLast())){
+                    currentDto = null;
                     break;
                 }
+            }
+            if(currentDto == null) {
+              break;
             }
             genderSwapPool.add(currentDto);
             malePerClassProcessDtoList.remove(currentDto);
@@ -110,15 +115,26 @@ public class ClassDivisionGenderSwap extends ClassDivisionProcessor {
                     femalePerClassProcessDtoList.get(
                         femalePerClassProcessDtoList.indexOf(currentDto) + 1);
                   if (currentDto.equals(femalePerClassProcessDtoList.getLast())){
+                      currentDto = null;
                       break;
                   }
               }
-            genderSwapPool.add(currentDto);
-            femalePerClassProcessDtoList.remove(currentDto);
-            value.remove(currentDto);
+
+            if(currentDto == null) {
+                break;
+            }
+                genderSwapPool.add(currentDto);
+                femalePerClassProcessDtoList.remove(currentDto);
+                value.remove(currentDto);
+
           }
             log.info("sortedClassNameListProcessDtoMap after add to genderSwapPool, key:{}, value:{}", key, value.size() );
         });
+
+      Comparator<ClassDivisionProcessDto> gradeComparator =
+              Comparator.comparing(ClassDivisionProcessDto::getStudentGradeRank);
+      genderSwapPool.stream().sorted(gradeComparator);
+
     log.info("new grade:{}, start swapping with genderSwapPool:{}",newGrade, genderSwapPool);
     log.info("sortedClassNameListProcessDtoMap: ");
     sortedClassNameListProcessDtoMap.forEach(
@@ -136,9 +152,6 @@ public class ClassDivisionGenderSwap extends ClassDivisionProcessor {
                         .filter(e -> StringUtils.equalsIgnoreCase(e.getStudentGender(), "F"))
                         .toList()
                         .size()));
-    Comparator<ClassDivisionProcessDto> gradeComparator =
-        Comparator.comparing(ClassDivisionProcessDto::getStudentGradeRank);
-    genderSwapPool.sort(gradeComparator);
     List<ClassDivisionProcessDto> maleGenderSwapPool =
         genderSwapPool.stream()
             .filter(e -> StringUtils.equalsIgnoreCase(e.getStudentGender(), "M"))
@@ -147,7 +160,7 @@ public class ClassDivisionGenderSwap extends ClassDivisionProcessor {
         genderSwapPool.stream()
             .filter(e -> StringUtils.equalsIgnoreCase(e.getStudentGender(), "F"))
             .collect(Collectors.toList());
-
+    List<ClassDivisionProcessDto> unsortedPoolSize = new ArrayList<>();
     while (maleGenderSwapPool.size() > 0) {
       int poolSize = maleGenderSwapPool.size();
       sortedClassNameListProcessDtoMap.forEach(
@@ -155,7 +168,7 @@ public class ClassDivisionGenderSwap extends ClassDivisionProcessor {
             if (maleGenderSwapPool.size() == 0) {
               return;
             }
-            ClassDivisionProcessDto current = maleGenderSwapPool.get(0);
+            ClassDivisionProcessDto current = maleGenderSwapPool.getFirst();
             if (value1.stream()
                         .filter(e -> StringUtils.equalsIgnoreCase(e.getStudentGender(), "M"))
                         .toList()
@@ -167,8 +180,15 @@ public class ClassDivisionGenderSwap extends ClassDivisionProcessor {
               genderSwapPool.remove(current);
             }
           });
-      if (poolSize == maleGenderSwapPool.size()) {
-        break;
+
+        if (genderSwapPool.size() == 0) {
+            break;
+        }
+      if (poolSize == maleGenderSwapPool.size() && maleGenderSwapPool.size() > 0) {
+          ClassDivisionProcessDto current = maleGenderSwapPool.getFirst();
+          unsortedPoolSize.add(current);
+          maleGenderSwapPool.remove(current);
+          genderSwapPool.remove(current);
       }
     }
 
@@ -179,10 +199,10 @@ public class ClassDivisionGenderSwap extends ClassDivisionProcessor {
       int poolSize = femaleGenderSwapPool.size();
       sortedClassNameListProcessDtoMap.forEach(
           (key1, value1) -> {
-            if (femaleGenderSwapPool.size() > 0) {
+            if (femaleGenderSwapPool.size() == 0) {
               return;
             }
-            ClassDivisionProcessDto current = femaleGenderSwapPool.get(0);
+            ClassDivisionProcessDto current = femaleGenderSwapPool.getFirst();
             if (value1.stream()
                         .filter(e -> StringUtils.equalsIgnoreCase(e.getStudentGender(), "F"))
                         .toList()
@@ -194,9 +214,16 @@ public class ClassDivisionGenderSwap extends ClassDivisionProcessor {
               genderSwapPool.remove(current);
             }
           });
-      if (poolSize == femaleGenderSwapPool.size()) {
-        break;
-      }
+
+        if (genderSwapPool.size() == 0) {
+            break;
+        }
+        if (poolSize == femaleGenderSwapPool.size() && femaleGenderSwapPool.size() > 0) {
+            ClassDivisionProcessDto current = femaleGenderSwapPool.getFirst();
+            unsortedPoolSize.add(current);
+            femaleGenderSwapPool.remove(current);
+            genderSwapPool.remove(current);
+        }
     }
     log.info("sortedClassNameListProcessDtoMap: ");
     sortedClassNameListProcessDtoMap.forEach(
@@ -214,12 +241,13 @@ public class ClassDivisionGenderSwap extends ClassDivisionProcessor {
                         .filter(e -> StringUtils.equalsIgnoreCase(e.getStudentGender(), "F"))
                         .toList()
                         .size()));
-    while (genderSwapPool.size() > 0) {
+    while (unsortedPoolSize.size() > 0) {
       sortedClassNameListProcessDtoMap.forEach(
           (key2, value2) -> {
-            if (genderSwapPool.size() > 0) {
-              ClassDivisionProcessDto current = genderSwapPool.getFirst();
+            if (unsortedPoolSize.size() > 0) {
+              ClassDivisionProcessDto current = unsortedPoolSize.getFirst();
               value2.add(current);
+              unsortedPoolSize.remove(current);
               genderSwapPool.remove(current);
             }
           });
@@ -241,9 +269,10 @@ public class ClassDivisionGenderSwap extends ClassDivisionProcessor {
                         .toList()
                         .size()));
     sortedClassNameListProcessDtoMap.forEach((k, v) -> v.forEach(e -> e.setNewClassName(k)));
-    return sortedClassNameListProcessDtoMap.values().stream()
-        .flatMap(List::stream)
-        .collect(Collectors.toList());
+
+    List<ClassDivisionProcessDto> result = new ArrayList<>();
+      sortedClassNameListProcessDtoMap.values().stream().forEach(v -> result.addAll(v));
+    return result;
   }
 
   private int getExpectedNumberOfMalePerClass(
